# hypershadow

./: .clang-format  CMakeLists.txt  README.md
source/: Application.cpp  Application.hpp  HyperCube.cpp  HyperCube.hpp  HyperCubeProjectionActor.cpp  HyperCubeProjectionActor.hpp  HyperPlane.cpp  HyperPlane.hpp  HyperPoints.cpp  HyperPoints.hpp  main.cpp
